[project]
name = "eodhp-accounting-s3-usage"
dynamic = ["version"]
description = "CHANGEME a short description"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Telespazio UK Ltd", email = "james.hinton@telespazio.com" }
]
maintainers = [
  {name = "Telespazio UK Ltd", email = "james.hinton@telespazio.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "boto3",
  "botocore",
  "pulsar-client",
  "click",
  "eodhp-utils @ git+https://github.com/EO-DataHub/eodhp-utils@v0.1.11",
]

[dependency-groups]
dev = [
    "faker",
    "moto",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-watcher",
    "pytest-xdist",
    "ruff",
    "validate-pyproject",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/eodhp-accounting-s3-usage"
changelog = "https://github.com/EO-DataHub/eodhp-accounting-s3-usage/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["accounting_s3_usage"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008"    # function call in default argument (incompatible with FastAPI)
]
